--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -7,13 +7,13 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#d9d9d9">
+    android:background="#FFDE03">
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/icon_splash"
+        android:src="@drawable/flashtime"
         android:foregroundGravity="center"/>
 </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
